[package]
name = "circuit_playground_express"
version = "0.9.0"
authors = ["Paul Sajna <paulsajna@gmail.com>"]
description = "Board Support crate for the Adafruit Circuit Playground Express"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
edition = "2018"

[dependencies]
cortex-m = "0.6"
embedded-hal = "0.2.3"
nb = "0.1"

[dependencies.cortex-m-rt]
version = "0.6.12"
optional = true

[dependencies.atsamd-hal]
path = "../../hal"
version = "0.12"
default-features = false

[dependencies.usb-device]
version = "0.2"
optional = true

[dependencies.usbd-serial]
version = "0.1"
optional = true

[dev-dependencies]
panic-halt = "0.2"
cortex-m-rt = "0.6.12"

[features]
# ask the HAL to enable atsamd21g support
default = ["rt", "atsamd-hal/samd21g"]
rt = ["cortex-m-rt", "atsamd-hal/samd21g-rt"]
unproven = ["atsamd-hal/unproven"]
usb = ["atsamd-hal/usb", "usb-device", "usbd-serial"]
use_semihosting = []

[[example]]
name="blinky_basic"

[[example]]
name = "usb_echo"
required-features = ["usb"]
